--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=recipeapi
 
 # Database Setup
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/recipe_api?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=recipeapiuser
 spring.datasource.password=recipeapi
@@ -8,9 +9,9 @@ spring.datasource.password=recipeapi
 #spring.datasource.password=${RECIPE_API_PASSWORD}
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type=TRACE
-#logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=DEBUG
