--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
-	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.2'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+//	implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
+//	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.2'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 
 	compileOnly 'org.projectlombok:lombok'
