--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type=TRACE
 logging.level.org.springframework.web=DEBUG
+
+
+spring.profiles.active=test
