--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.web=DEBUG
 
 
-#spring.profiles.active=test
+spring.profiles.active=test
