--- a/build.gradle
+++ b/build.gradle
@@ -24,13 +24,17 @@ dependencies {
 //	implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
 //	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.2'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
+	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 }
